hw-03/answer_exercise_1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx-server
  ports:
    - protocol: TCP
      port: 80
