hw-03/answer_exercise_1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-service-ingress
spec:
  tls:
    - hosts:
        - "mireia.student.lasalle.com"
      secretName: secret-tls
  rules:
    - host: "mireia.student.lasalle.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port: 
                  number: 80
